# containerized-ros

./: README.md  docker-compose.yml  ros-compose.yml  workspace.yml
docker/: Dockerfile  apt-dependencies.txt  bashrc  ros_entrypoint.sh  vimrc  zshrc
docker/bashrc.d/: source_ros.sh
ros_ws/src/common/ros_cpp_proxy/: CMakeLists.txt  package.xml
ros_ws/src/common/ros_cpp_proxy/include/ros_cpp_proxy/: publisher_proxy.hpp  subscriber_proxy.hpp
ros_ws/src/common/ros_cpp_proxy/launch/: str_publisher.launch.py
ros_ws/src/common/ros_cpp_proxy/src/: proxies.cpp
ros_ws/src/ros_cpp/cpp_pub/: CMakeLists.txt  package.xml
ros_ws/src/ros_cpp/cpp_pub/include/cpp_pub/: str_publisher.hpp
ros_ws/src/ros_cpp/cpp_pub/launch/: str_publisher.launch.py
ros_ws/src/ros_cpp/cpp_pub/src/: str_publisher.cpp
ros_ws/src/ros_cpp/cpp_sub/: package.xml
